Added initial bank backend code to track account numbers, ethereum addresses, account balances, etc.  Also added initial App routes for interacting with the bank backend.  Need to add function to populate bank key/value store with account information (helper function in bank.js should assist this).

--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "hardhat": "^2.6.8"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.3.3"
+    "@openzeppelin/contracts": "^4.3.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "level": "^7.0.1"
   }
 }
