--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.3.3",
+    "bignumber.js": "^9.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "level": "^7.0.1"
