--- a/checkfi/package.json
+++ b/checkfi/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "ethers": "^5.5.1",
+    "html2canvas": "^1.3.3",
     "node-sass": "^6.0.1",
     "payment": "^2.4.6",
     "react": "^17.0.2",
